--- a/src/css/index.css
+++ b/src/css/index.css
@@ -588,6 +588,7 @@ progress::-webkit-progress-value {
 
 
 /*------------------------------------------------------ Portfolio -------------------------------------------------------- */
+
 .project-container {
   display: grid;
   grid-template-columns: 1fr;
@@ -600,6 +601,7 @@ progress::-webkit-progress-value {
   margin-left: 2rem;
 }
 
+
 .project-card {
   cursor: pointer;
   border: none;
@@ -611,11 +613,9 @@ progress::-webkit-progress-value {
   text-align: center;
   color: #e9e9e9;
 }
-
 .project-card:hover {
   transform: translateY(-5px);
 }
-
 .project-card img {
   width: 100%;
   height: 150px;
@@ -624,37 +624,54 @@ progress::-webkit-progress-value {
   transition: transform 0.3s ease-in-out;
 
 }
-
 .project-card:hover img {
   transform: scale(1.1);
 }
 
 .project-details {
+  background-color: #0908086a;
+  padding: 20px;
+  border-radius: 8px;
   text-align: center;
-  margin-top: 20px;
-  padding: 1rem;
+  max-width: 80%;
+  overflow: auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
-
 .project-details img {
   width: 100%;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
 }
-
+.project-details img:hover {
+  transform: scale(1.1);
+}
+.project-details-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
 .project-details h2 {
-  color: #ffffff;
-  font-size: 1.5em;
+  color: #fffefe;
+  font-size: 1.8em;
   margin-bottom: 10px;
 }
-
 .project-details p {
-  color: #ffffff;
+  color: #333;
   line-height: 1.6;
   padding: 0.5rem;
-  background-color: #9a98be;
-  max-width: 100%; 
+  background-color: #f0f0f0;
+  max-width: 100%;
   border-radius: 8px;
 }
+
 
 .btn-portfolio {
   margin-top: 0.5rem;
@@ -668,13 +685,11 @@ progress::-webkit-progress-value {
   transition: background 0.3s ease;
   width: 80%;
 }
-
 .button-container {
   display: flex;
   justify-content: center;
   margin-top: 20px;
 }
-
 .button-container button {
   padding: 12px 24px;
   font-size: 16px;
@@ -685,10 +700,10 @@ progress::-webkit-progress-value {
   transition: background-color 0.3s ease-in-out;
   background-color: #3498db;
 }
-
 .button-container button:hover {
   background-color: #217dbb;
 }
+
 
 
 .modal {
@@ -703,8 +718,6 @@ progress::-webkit-progress-value {
   align-items: center;
   backdrop-filter: blur(10px); /* Ajoutez cet effet de flou sur le fond */
 }
-
-
 .modal-content {
   max-width: 80%;
   max-height: 80%;
