--- a/src/css/index.css
+++ b/src/css/index.css
@@ -219,7 +219,7 @@ a:hover {
   align-items: center;
   height: 100vh;
   background: linear-gradient(to left, #31688d, #6657a1);
-  color: #88A733;
+  color: #aeff00;
   text-align: center;
   flex-direction: column;
 } 
